8263587: C2: JVMS not cloned when needs_clone_jvms() is true